--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,15 @@ CMSIS/RTOS/RTX/LIB/**/*.lib
 CMSIS/RTOS2/RTX/Library/**/*.a
 CMSIS/RTOS2/RTX/Library/**/*.lib
 output
+
+# xpm
+xpacks/
+
+# Windows
+Thumbs.db
+
+# macOS
+.DS_Store
+
+*.tgz
+# end
