--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
   "dependencies": {},
   "devDependencies": {},
   "xpack": {
-    "minimumXpmRequired": "0.11.0"
+    "minimumXpmRequired": "0.11.0",
+    "actions": {
+      "test-all": "echo TODO"
+    }
   }
 }
