--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
   "scripts": {
     "npm-install": "npm install",
     "pack": "npm pack",
-    "version-patch": "npm version patch",
-    "version-minor": "npm version minor",
     "postversion": "git push origin --all && git push origin --tags",
     "git-log": "git log --pretty='%cd * %h %s' --date=short"
   },
@@ -40,8 +38,12 @@
   "devDependencies": {},
   "xpack": {
     "minimumXpmRequired": "0.11.0",
+    "properties": {},
     "actions": {
-      "test-all": "echo TODO"
-    }
+      "install-all": "echo TODO",
+      "test-all": "echo TODO",
+      "clean-all": "echo TODO"
+    },
+    "buildConfigurations": {}
   }
 }
