--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,7 +60,7 @@ if ("${CMAKE_CURRENT_LIST_DIR}" STREQUAL "${CMAKE_SOURCE_DIR}")
 
 else()
 
-  ## Main targets built by this project ##
+  # Main targets built by this project.
   add_subdirectory("CMSIS/Core")
 
 endif()
