--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@xpack-3rd-party/arm-cmsis-core-m",
+  "name": "@xpack-3rd-party/arm-cmsis-core",
   "version": "5.4.0-5",
-  "description": "A source library xPack with Arm CMSIS Core-M",
+  "description": "A source library xPack with Arm CMSIS Core",
   "main": "",
   "scripts": {
     "npm-install": "npm install",
@@ -11,12 +11,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/xpack-3rd-party/arm-cmsis-core-m-xpack.git"
+    "url": "https://github.com/xpack-3rd-party/arm-cmsis-core-xpack.git"
   },
   "bugs": {
-    "url": "https://github.com/xpack-3rd-party/arm-cmsis-core-m-xpack/issues/"
+    "url": "https://github.com/xpack-3rd-party/arm-cmsis-core-xpack/issues/"
   },
-  "homepage": "https://github.com/xpack-3rd-party/arm-cmsis-core-m-xpack/",
+  "homepage": "https://github.com/xpack-3rd-party/arm-cmsis-core-xpack/",
   "keywords": [
     "xpack"
   ],
