.vscode/settings.json: ignoreWords

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     "NVIC",
     "POSIX",
     "PRIO",
+    "Xpmake",
     "buildtype",
     "cmake",
     "cmsis",
@@ -26,5 +27,6 @@
     "xpack",
     "xpacks"
   ],
-  "cmake.configureOnOpen": false
+  "cmake.configureOnOpen": false,
+  "editor.wordWrap": "on"
 }
