--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,7 @@
     "xpack",
     "xpacks"
   ],
+  "cmake.ignoreCMakeListsMissing": true,
   "cmake.configureOnOpen": false,
   "makefile.configureOnOpen": false,
   "editor.wordWrap": "on"
