--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "type": "git",
     "url": "https://github.com/xpack-3rd-party/arm-cmsis-core-xpack.git"
   },
+  "homepage": "https://github.com/xpack-3rd-party/arm-cmsis-core-xpack/",
   "bugs": {
     "url": "https://github.com/xpack-3rd-party/arm-cmsis-core-xpack/issues/"
   },
-  "homepage": "https://github.com/xpack-3rd-party/arm-cmsis-core-xpack/",
   "keywords": [
     "xpack"
   ],
@@ -35,9 +35,12 @@
   "license": "MIT",
   "config": {},
   "dependencies": {},
+  "bundleDependencies": [],
   "devDependencies": {},
   "xpack": {
-    "minimumXpmRequired": "0.13.7",
+    "minimumXpmRequired": "0.14.0",
+    "dependencies": {},
+    "devDependencies": {},
     "properties": {},
     "actions": {
       "install-all": "echo TODO",
