--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@xpack-3rd-party/arm-cmsis-core",
   "version": "5.4.0-6",
-  "description": "A source library xPack with Arm CMSIS Core",
+  "description": "A source code library with Arm CMSIS Core",
   "main": "",
   "scripts": {
     "npm-install": "npm install",
